--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Логотип Россия">
       <div class="header__links">
-        <a href="#" class="header__link">Ru</a>
-        <a href="#" class="header__link">En</a>
+        <a href="#" class="header__link header__link_active">Ru</a>
+        <a href="#" class="header__link header__link_active">En</a>
       </div>
     </header>
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
-        <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="Фотография спящей девушки в плацкарте">
-        <h3 class="lead__caption">ваша полка — верхняя</h3>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+          <img class="lead__image" src="./images/lead-polka.jpg" alt="Фотография спящей девушки в плацкарте">
+          <p class="lead__caption">ваша полка — верхняя</p>
       </section>
       <section class="description">
         <div class="intro">
@@ -116,11 +116,11 @@
       </section>
       <section class="cover">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</h3>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__image" target="_blank"></a>
       </section>
     </main> 
-    <div class="footer">
+    <footer class="footer">
       <div class="footer__columns">
         <nav>
           <ul class="footer__links">
@@ -131,9 +131,9 @@
             <li><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a></li>
           </ul>
         </nav>
-        <p class="footer__copyright">&#169; 2020. Роман Потапов</p>
+        <p class="footer__copyright">&copy; 2020. Роман Потапов</p>
       </div>
-    </section>
+    </footer>
   </div>
 </body>
 </html>
