--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img class="header__logo" src="./images/header-logo.svg" alt="Логотип Россия">
       <div class="header__links">
         <a href="#" class="header__link header__link_active">Ru</a>
-        <a href="#" class="header__link header__link_active">En</a>
+        <a href="#" class="header__link">En</a>
       </div>
     </header>
     <main class="content">
